# kotodama-holochain

./: .gitignore  README.md
.github/workflows/: no-rust.yml
agent-actor-runtime/: .dockerignore  CHARTER-RIDER.md  Cargo.toml  Dockerfile  NOTICE  README.md
agent-actor-runtime/dnas/agent_actor_runtime/workdir/: dna.yaml
agent-actor-runtime/dnas/agent_actor_runtime/zomes/coordinator/actor_runtime/: Cargo.toml
agent-actor-runtime/dnas/agent_actor_runtime/zomes/coordinator/actor_runtime/src/: lib.rs
agent-actor-runtime/dnas/agent_actor_runtime/zomes/integrity/actor_runtime/: Cargo.toml
agent-actor-runtime/dnas/agent_actor_runtime/zomes/integrity/actor_runtime/src/: lib.rs
agent-actor-runtime/examples/: commit-actor-event.json  langchain-tool-agent.json  langgraph-echo-agent.json
agent-actor-runtime/scripts/: call-zome-smoke.sh
agent-actor-runtime/smoke/call-zome/: Cargo.toml
agent-actor-runtime/smoke/call-zome/src/: main.rs
agent-actor-runtime/workdir/: happ.yaml
