[workspace]
resolver = "2"
members = [
  "dnas/agent_actor_runtime/zomes/integrity/actor_runtime",
  "dnas/agent_actor_runtime/zomes/coordinator/actor_runtime",
  "smoke/call-zome"
]

[workspace.package]
edition = "2021"
version = "0.1.0"
license = "Apache-2.0"

[workspace.dependencies]
hdi = "=0.7.0"
hdk = "=0.6.0"
getrandom = { version = "0.4.2", features = ["wasm_js"] }
holochain_serialized_bytes = "=0.0.56"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
