[package]
name = "holochain-agent-runtime-call-zome-smoke"
edition.workspace = true
version.workspace = true
license.workspace = true
publish = false

[dependencies]
actor_runtime_integrity = { path = "../../dnas/agent_actor_runtime/zomes/integrity/actor_runtime" }
anyhow = "1"
bytes = "1"
holo_hash = { version = "=0.6.0", features = ["full"] }
holochain = { version = "=0.6.0", default-features = false, features = ["sweettest", "wasmer_sys"] }
holochain_types = { version = "=0.6.0", features = ["test_utils"] }
serde.workspace = true
serde_json.workspace = true
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
