[package]
name = "actor_runtime"
edition.workspace = true
version.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
actor_runtime_integrity = { path = "../../integrity/actor_runtime" }
getrandom.workspace = true
hdk.workspace = true
holochain_serialized_bytes.workspace = true
serde.workspace = true
